--- a/src/RetirementManager.WPF/App.xaml
+++ b/src/RetirementManager.WPF/App.xaml
@@ -2,8 +2,11 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:RetirementManager.WPF"
-             StartupUri="MainWindow.xaml">
+             xmlns:viewmodels="clr-namespace:RetirementManager.WPF.ViewModels"
+             xmlns:views="clr-namespace:RetirementManager.WPF.Views">
     <Application.Resources>
-         
+        <DataTemplate DataType="{x:Type viewmodels:WorkerList}">
+            <views:WorkerListView/>
+        </DataTemplate>
     </Application.Resources>
 </Application>
