Clientlist Class/View, hole Client Display System + Delete Button

--- a/src/RetirementManager.WPF/App.xaml
+++ b/src/RetirementManager.WPF/App.xaml
@@ -11,5 +11,8 @@
         <DataTemplate DataType="{x:Type viewmodels:WorkerList}">
             <views:WorkerListView/>
         </DataTemplate>
+        <DataTemplate DataType="{x:Type viewmodels:ClientList}">
+            <views:ClientListView/>
+        </DataTemplate>
     </Application.Resources>
 </Application>
