--- a/src/RetirementManager.WPF/Views/AddOrEditClient.xaml
+++ b/src/RetirementManager.WPF/Views/AddOrEditClient.xaml
@@ -1,55 +1,52 @@
-﻿<Window x:Class="RetirementManager.WPF.Views.AddOrEditWorker"
+﻿<Window x:Class="RetirementManager.WPF.Views.AddOrEditClient"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RetirementManager.WPF.Views"
         mc:Ignorable="d"
-        Title="AddOrEditWorker" Height="450" Width="800">
+       Title="AddOrEditClient" Height="450" Width="800">
     <Window.Resources>
         <Style TargetType="TextBox">
             <Setter Property="Width" Value="150"/>
         </Style>
     </Window.Resources>
     <Grid HorizontalAlignment="Center">
-
-      
-
         <StackPanel Orientation="Vertical"
-                HorizontalAlignment="Center">
+             HorizontalAlignment="Center">
 
             <StackPanel Orientation="Horizontal" Margin="0 10">
                 <Label Content="Name"/>
                 <TextBox Text="{Binding Name}"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0 10">
-                <Label Content="Mobil"/>
-                <TextBox Text="{Binding Mobil}"/>
+                <Label Content="Contact"/>
+                <TextBox Text="{Binding Contact}"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0 10">
-                <Label Content="Birthdate"/>
-                <TextBox Text="{Binding BirthDate}" Width="135"/>
+                <Label Content="Age"/>
+                <TextBox Text="{Binding Age}" Width="135"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0 10">
                 <Label Content="Notes"/>
                 <TextBox Text="{Binding Notes}"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0 10">
-                <Label Content="Email"/>
-                <TextBox Text="{Binding Email}"/>
+                <Label Content="Single"/>
+                <TextBox Text="{Binding Single}"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal" 
-            Margin="0 50 0 0"
-            HorizontalAlignment="Center">
+         Margin="0 50 0 0"
+         HorizontalAlignment="Center">
                 <Button Content="Save" 
-            Margin="25"
-            Width="50"
-            CommandParameter="{Binding Worker}"
-            Command="{Binding SaveWorkerCommand}"            
-                        ></Button>
+         Margin="25"
+         Width="50"
+         CommandParameter=""
+         Command=""            
+                     ></Button>
                 <Button Content="Cancel" 
-            Margin="25"
-            Width="50"></Button>
+         Margin="25"
+         Width="50"></Button>
             </StackPanel>
         </StackPanel>
     </Grid>
