--- a/src/RetirementManager.WPF/Views/AddOrEditAssignment.xaml
+++ b/src/RetirementManager.WPF/Views/AddOrEditAssignment.xaml
@@ -34,13 +34,13 @@
             <StackPanel Orientation="Horizontal"
                 HorizontalAlignment="Right">
                 <Label>Start Date</Label>
-                <TextBox VerticalAlignment="Center"/>
+                <TextBox VerticalAlignment="Center" Text="{Binding StartDate}"/>
             </StackPanel>
 
             <StackPanel Orientation="Horizontal"
                 HorizontalAlignment="Right">
                 <Label>End Date</Label>
-                <TextBox VerticalAlignment="Center"/>
+                <TextBox VerticalAlignment="Center" Text="{Binding EndDate}"/>
             </StackPanel>
 
             <StackPanel Orientation="Horizontal"
@@ -53,7 +53,7 @@
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
                 <Label>Paused</Label>
-                <RadioButton HorizontalAlignment="Center" Margin="10 5 0 0"></RadioButton>
+                <RadioButton HorizontalAlignment="Center" Margin="10 5 0 0" IsChecked="{Binding IsPaused}"></RadioButton>
             </StackPanel>
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
