--- a/src/RetirementManager.WPF/Views/AddOrEditAssignment.xaml
+++ b/src/RetirementManager.WPF/Views/AddOrEditAssignment.xaml
@@ -62,7 +62,7 @@
             </StackPanel>
 
             <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
-                <Button Content="Save" Margin="0 10 5 0" Command="{Binding SaveAssignmentCommand}"></Button>
+                <Button Content="Save" Margin="0 10 5 0" Command="{Binding SaveAssignmentCommand}" CommandParameter ="{Binding Assignment}"></Button>
                 
             </StackPanel>
 
