Dont remeber it all but we did some updates

--- a/src/RetirementManager.WPF/App.xaml
+++ b/src/RetirementManager.WPF/App.xaml
@@ -11,5 +11,8 @@
         <DataTemplate DataType="{x:Type viewmodels:ClientList}">
             <views:ClientListView/>
         </DataTemplate>
+        <DataTemplate DataType="{x:Type viewmodels:AssignmentHistory}">
+            <views:AssignmentHistoryView/>
+        </DataTemplate>
     </Application.Resources>
 </Application>
